<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_marginTop="30dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/productName"
                android:layout_width="345dp"
                android:layout_height="41dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="30dp"
                android:text="@string/name"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/productImage"
                android:layout_width="349dp"
                android:layout_height="244dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="32dp"
                android:contentDescription="@string/productimage"
                android:padding="10dp" />

            <TextView
                android:id="@+id/productDepartments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="31dp"
                android:text="@string/departments"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/productDueDate"
                android:layout_width="350dp"
                android:layout_height="28dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="31dp"
                android:text="@string/due_date_12_12_2020"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/productBid"
                android:layout_width="350dp"
                android:layout_height="28dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="31dp"
                android:text="@string/current_highest_bid"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/productDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="31dp"
                android:text="@string/description"
                android:textSize="15sp"
                tools:minHeight="30dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="99dp">

                <TextView
                    android:id="@+id/newBidTag"
                    android:layout_width="110dp"
                    android:layout_height="27dp"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="25dp"
                    android:text="@string/your_bid"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/newBid"
                    android:layout_width="151dp"
                    android:layout_height="46dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="13dp"
                    android:layout_marginEnd="120dp"
                    android:autofillHints=""
                    android:contentDescription="@string/make_bid"
                    android:ems="10"
                    android:hint="@string/example_val"
                    android:inputType="numberDecimal"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/btnMakeBid"
                    android:layout_width="81dp"
                    android:layout_height="34dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="31dp"
                    android:text="@string/make_bid"
                    android:textSize="12sp" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>